--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,15 @@ canvas {
   max-width: 1120px;
 }
 
+/* Logik für die die Divider im Footer */
+/* global.css */
+/* @media (min-width: 450px) {
+  .hide-divider {
+    display: none;
+  }
+} */
+
+/* Utilities Klassen */
 @layer utilities {
   .flex-center {
     @apply flex items-center justify-center;
